# video-ascii

./: .gitignore  Cargo.toml
src/: args.rs  decoder.rs  frame.rs  main.rs  reader.rs  render.rs  util.rs
